refactor: Info 네이밍 제거로 인한 해당 클래스 네이밍 변경